mejoras en footer: iframe con ancho máximo, formulario con ancho responsive, iconos de fontawesome

--- a/index.html
+++ b/index.html
@@ -664,19 +664,36 @@
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
                 <ul class="ul__contacto">
                     <li><a rel="noopener noreferrer" href="https://maps.app.goo.gl/fXyiYq3rNigSgJFJA"
-                            target="_blank"><img src="./assets/pasador-de-ubicacion (1).png" alt="">Los escritores 2816
-                            Barrio Cóndor y Andes
-                            Maipú Mendoza</a></li>
-                    <li><a href=""><img src="./assets/llamada-telefonica (1).png" alt="">+5492616965358</a></li>
-                    <li><a href="https://wa.me/549261696535"><img src="./assets/whatsapp.png" alt="">+5492616965358</a>
+                            target="_blank"><svg class="ubicacion">
+                                <use href="./assets/icons/iconos.svg#icon-place"
+                                    xlink:href="./assets/icons/iconos.svg#icon-place"></use>
+                            </svg>Los escritores 2816, Barrio Cóndor y Andes | Maipú | Mendoza</li>
+                    <li><a href=""><svg class="phone">
+                                <use href="./assets/icons/iconos.svg#icon-phone"
+                                    xlink:href="./assets/icons/iconos.svg#icon-phone"></use>
+                            </svg>+5492616965358</a></li>
+                    <li><a href="https://wa.me/549261696535"><svg class="whatsapp">
+                                <use href="./assets/icons/iconos.svg#icon-whatsapp"
+                                    xlink:href="./assets/icons/iconos.svg#icon-whatsapp"></use>
+                            </svg>+5492616965358</a>
                     </li>
-                    <li><a href=""><img src="./assets/email.png" alt="">turismocordilleramendoza@gmail.com</a></li>
+                    <li><a href=""><svg class="envelope">
+                                <use href="./assets/icons/iconos.svg#icon-envelope"
+                                    xlink:href="./assets/icons/iconos.svg#icon-envelope"></use>
+                            </svg>turismocordilleramendoza@gmail.com</a></li>
                 </ul>
                 <div class="iconos__redes">
-                    <a rel="noopener noreferrer"
-                        href="https://www.instagram.com/tcmdz.24?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
-                        target="_blank"><img src="./assets/solicitud.png" alt=""></a>
-                    <a rel="noopener noreferrer" href=""><img src="./assets/facebook (1).png" alt=""></a>
+                    <p>Seguinos en <a rel="noopener noreferrer"
+                            href="https://www.instagram.com/tcmdz.24?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">tcmdz.24</a>
+                    </p>
+                    <p> <a rel="noopener noreferrer"
+                            href="https://www.instagram.com/tcmdz.24?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
+                            target="_blank"><svg class="ig">
+                                <use href="./assets/icons/iconos.svg#icon-ig-filled"
+                                    xlink:href="./assets/icons/iconos.svg#icon-envelope-ig-filled"></use>
+                            </svg></a>
+
+                    </p>
                 </div>
             </div>
 
