corrigiendo el footer para que no se rompa en mobile

--- a/index.html
+++ b/index.html
@@ -663,8 +663,8 @@
                     width="500" height="250" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
                 <ul class="ul__contacto">
-                    <li><a rel="noopener noreferrer" href="https://maps.app.goo.gl/fXyiYq3rNigSgJFJA"
-                            target="_blank"><svg class="ubicacion">
+                    <li><a rel="noopener noreferrer" href="https://maps.app.goo.gl/fXyiYq3rNigSgJFJA" target="_blank">
+                            <svg class="ubicacion">
                                 <use href="./assets/icons/iconos.svg#icon-place"
                                     xlink:href="./assets/icons/iconos.svg#icon-place"></use>
                             </svg>Los escritores 2816, Barrio Cóndor y Andes | Maipú | Mendoza</li>
