transporte y paquetes más prolijos en mobile

--- a/index.html
+++ b/index.html
@@ -553,8 +553,6 @@
             </div>
             <div class="apartados__cajas">
                 <div class="apartados__item paquetes">
-
-
                 </div>
                 <div class="apartados__item cajas__info">
                     <p>¿Buscas paquetes completos de alojamiento en Mendoza, Argentina o en el exterior? <br>¡Tenemos un
@@ -621,7 +619,11 @@
             </div>
             <div class="apartados__cajas">
                 <div class="apartados__item cajas__info">
-
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, iste tenetur, rerum corporis
+                        dignissimos vitae, ipsa harum nesciunt molestiae a exercitationem! Odit unde tempore at cum
+                        animi delectus excepturi veniam. Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Numquam pariatur officia id adipisci nemo? Quibusdam nobis ipsa labore blanditiis voluptas
+                        laboriosam! Debitis numquam consequatur cum perferendis porro! Sapiente, nam modi.</p>
                 </div>
                 <div class="apartados__item transporte">
 
