--- a/index.html
+++ b/index.html
@@ -619,11 +619,11 @@
             </div>
             <div class="apartados__cajas">
                 <div class="apartados__item cajas__info">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, iste tenetur, rerum corporis
-                        dignissimos vitae, ipsa harum nesciunt molestiae a exercitationem! Odit unde tempore at cum
-                        animi delectus excepturi veniam. Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Numquam pariatur officia id adipisci nemo? Quibusdam nobis ipsa labore blanditiis voluptas
-                        laboriosam! Debitis numquam consequatur cum perferendis porro! Sapiente, nam modi.</p>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui magnam numquam dolores facilis
+                        debitis exercitationem velit quam iure ullam blanditiis sequi, necessitatibus consequatur at
+                        nisi veniam illo! Iusto, eum qui! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rem
+                        repudiandae est nobis laboriosam soluta maiores quia modi eum? Doloremque, iusto veniam!
+                        Obcaecati aliquid recusandae officiis excepturi, mollitia qui impedit dicta.</p>
                 </div>
                 <div class="apartados__item transporte">
 
@@ -631,7 +631,7 @@
             </div>
         </section>
         <!--FOOTER-->
-        <footer>
+        <section class="contacto" id="contacto">
             <form action="https://formsubmit.co/turismocordilleramendoza@gmail.com" method="POST"
                 class="form__contacto">
                 <img src="./assets/logo-transparente.png" alt="" class="logo__footer">
@@ -663,14 +663,12 @@
 
             </form>
             <div class="datos__contacto">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos illo exercitationem voluptas
-                    quas
-                    quibusdam blanditiis similique, libero cum, aliquid natus nesciunt at eaque, quam itaque quos
-                    repellendus excepturi veniam pariatur.</p>
+                <p>Te esperamos para recorrer los mejores paisajes de Argentina y el mundo. Ya nos encontraste en el
+                    cyberespacio 😉, ahora conocenos en persona. Acá te dejamos nuestras coordenadas... ¡Nos vemos
+                    en Mendoza! </p>
                 <iframe title="Mapa de ubicación"
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3347.5561911433742!2d-68.8178239!3d-32.9627249!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x967e0b820d0c403d%3A0x236fff79a86c72ff!2sLos%20Escritores%202816%2C%20Maip%C3%BA%2C%20Mendoza!5e0!3m2!1ses-419!2sar!4v1713128154377!5m2!1ses-419!2sar"
-                    width="500" height="250" allowfullscreen="" loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 <ul class="ul__contacto">
                     <li><a rel="noopener noreferrer" title="icono de ubicación"
                             href="https://maps.app.goo.gl/fXyiYq3rNigSgJFJA" target="_blank">
@@ -707,7 +705,39 @@
                 </div>
             </div>
 
+        </section>
+        <footer>
+            <div class="pagos__como">
+                <h3>¿Cómo contratar nuestros servicios?</h3>
+                <p>1 - Recorrés nuestra web y elegís la excursión de tu interés</p>
+                <p>2 - Nos contactás a través de alguno de nuestros medios de contacto</p>
+                <p>3 - Te mandamos el presupuesto</p>
+                <p>4 - Pagás con el medio de pago que prefieras y...</p>
+                <p>5 - ¡Listo!! Ya podés ir a preparar las valijas</p>
+            </div>
+            <div class="footer__derecha">
+                <h3>Medios de pago</h3>
+                <div class="pagos__medios">
+                    <figure><img src="./assets/pagos/visa.png" alt="logo Visa"></figure>
+                    <figure><img src="./assets/pagos/master.png" alt="logo Master Card"></figure>
+                    <figure><img src="./assets/pagos/cabal.png" alt="logo Cabal"></figure>
+                    <figure><img src="./assets/pagos/modo.png" alt="logo Modo"></figure>
+                    <figure><img src="./assets/pagos/dni.png" alt="logo Cuenta DNI"></figure>
+                    <figure><img src="./assets/pagos/bna.png" alt="logo BNA+"></figure>
+                    <figure><img src="./assets/pagos/mp.png" alt="logo Mercado Pago"></figure>
+                </div>
+                <p class="small">Los pagos los podrás realizar online a través de un botón de pago que te enviaremos
+                    nosotros, o acercándote a nuestro local. Si elegís pagar a distancia, aceptamos todas las tarjetas y
+                    billeteras virtuales, además de transferencias bancarias. Si preferís venir al local, también
+                    aceptamos efectivo.</p>
+                <p class="small sipago">Con el apoyo, la experiencia y confianza de SIPAGO <img class="sipagoLogo"
+                        src="./assets/pagos/Ssipago.png" alt="logoSipago"></p>
+            </div>
+
         </footer>
+        <section class="derechos">
+            <p class="small">&reg; Todos los derechos reservados - Turismo Cordillera - Mendoza, Argentina</p>
+        </section>
     </div>
     <script src="./js/index.js"></script>
 </body>
