transporte finalizado, boton terminos y condiciones al final

--- a/index.html
+++ b/index.html
@@ -123,7 +123,8 @@
                                 <use href="./assets/icons/iconos.svg#icon-info"
                                     xlink:href="./assets/icons/iconos.svg#icon-info"></use>
                             </svg>Hacé click en la excursión que te interesa para ver la ficha
-                            correspondiente.</p>
+                            correspondiente. <br><span class="warning">Las fichas se abren en una ventana nueva.</span>
+                        </p>
                         <ul>
                             <li><a rel="noopener noreferrer" target="_blank"
                                     href="https://docs.google.com/document/d/1QTIjjUMb-SVGVLUkw6hnvytuiX0GOrOh/edit">City
@@ -197,7 +198,8 @@
                     </div>
                     <div class="apartados__extra--contenido">
                         <p class="small info">Hacé click en la excursión que te interesa para ver la ficha
-                            correspondiente.</p>
+                            correspondiente. <br><span class="warning">Las fichas se abren en una ventana nueva.</span>
+                        </p>
                         <ul>
                             <li><a rel="noopener noreferrer" target="_blank"
                                     href="https://docs.google.com/document/d/1JhiiM11qMMpwG2PE0ESM6n4JonjqCiOo/edit">Excursión
@@ -318,7 +320,9 @@
                                 <use href="./assets/icons/iconos.svg#icon-info"
                                     xlink:href="./assets/icons/iconos.svg#icon-info"></use>
                             </svg>Hacé click en la excursión que te interesa para ver la ficha
-                            correspondiente.</p>
+                            correspondiente. <br><span class="warning">Las fichas se abren en una ventana nueva.</span>
+                        </p>
+
                         <ul>
                             <li><a rel="noopener noreferrer" target="_blank"
                                     href="https://docs.google.com/document/d/1rfKWwGkHVJ7IHupDFjgwhTbK7HYgJ-X_/edit">Cabalgata
@@ -360,7 +364,8 @@
                     </div>
                     <div class="apartados__extra--contenido">
                         <p class="small info">Hacé click en la excursión que te interesa para ver la ficha
-                            correspondiente</p>
+                            correspondiente. <br><span class="warning">Las fichas se abren en una ventana nueva.</span>
+                        </p>
                         <ul>
                             <li><a rel="noopener noreferrer" target="_blank"
                                     href="https://docs.google.com/document/d/1JhiiM11qMMpwG2PE0ESM6n4JonjqCiOo/edit">Excursión
@@ -451,7 +456,8 @@
                                 <use href="./assets/icons/iconos.svg#icon-info"
                                     xlink:href="./assets/icons/iconos.svg#icon-info"></use>
                             </svg>Hacé click en la excursión que te interesa para ver la ficha
-                            correspondiente.</p>
+                            correspondiente. <br><span class="warning">Las fichas se abren en una ventana nueva.</span>
+                        </p>
                         <ul>
 
                             <li><a rel="noopener noreferrer" target="_blank"
@@ -503,7 +509,8 @@
                     </div>
                     <div class="apartados__extra--contenido">
                         <p class="small info">Hacé click en la excursión que te interesa para ver la ficha
-                            correspondiente</p>
+                            correspondiente. <br><span class="warning">Las fichas se abren en una ventana nueva.</span>
+                        </p>
                         <ul>
                             <li><a rel="noopener noreferrer" target="_blank"
                                     href="https://docs.google.com/document/d/16iE_pxP_eju-njrOobyeSh0btG8NKaVB/edit">Baño
@@ -619,12 +626,32 @@
             </div>
             <div class="apartados__cajas">
                 <div class="apartados__item cajas__info">
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui magnam numquam dolores facilis
-                        debitis exercitationem velit quam iure ullam blanditiis sequi, necessitatibus consequatur at
-                        nisi veniam illo! Iusto, eum qui! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rem
-                        repudiandae est nobis laboriosam soluta maiores quia modi eum? Doloremque, iusto veniam!
-                        Obcaecati aliquid recusandae officiis excepturi, mollitia qui impedit dicta.</p>
+                    <p>Junto a la empresa LG viajes, ofrecemos también un servicio de transporte de pasajeros,
+                        cumpliendo con las disposiciones legales vigentes y altos estándares de calidad y seguridad.
+                    </p>
+                    <h3>Personal</h3>
+                    <p>Nuestro plantel, integrado por personal de la zona, está altamente calificado para atender las
+                        necesidades de cada cliente, además de poseer las habilitaciones correspondientes.</p>
+                    <h3>Flota</h3>
+                    <p>Poseemos unidades habilitadas para realizar transporte jurisdiccional, interjurisdiccional e
+                        internacional con capacidades varias, en el rango de 19 a 49 personas por vehículo. Todas las
+                        unidades cuentas con cinturones de seguridad, salidas de emergencia, rompe cristales, extintores
+                        y más.</p>
+                    <h3>Base</h3>
+                    <p>Nuestra base de operaciones es un predio de 100 metros cuadrados de superficie, con paredón en
+                        todo el perímetro. Las instalaciones cuentan con taller de mantenimiento, sala de personal,
+                        cocina, baño, oficinas, depósitos, lavadero y estacionamiento.</p>
+                    <div class="fichas">
+                        <p>Escribinos por whatsapp y reservá nuestros servicios</p>
+                        <p class="notas"><a href="https://wa.me/5492616965358">
+                                Reservar<svg class="whatsapp">
+                                    <use href="./assets/icons/iconos.svg#icon-whatsapp"
+                                        xlink:href="./assets/icons/iconos.svg#icon-whatsapp"></use>
+                                </svg>
+                            </a></p>
+                    </div>
                 </div>
+
                 <div class="apartados__item transporte">
 
                 </div>
@@ -732,6 +759,12 @@
                     aceptamos efectivo.</p>
                 <p class="small sipago">Con el apoyo, la experiencia y confianza de SIPAGO <img class="sipagoLogo"
                         src="./assets/pagos/Ssipago.png" alt="logoSipago"></p>
+                <p>
+                    <a class="small terminos_condiciones"
+                        href="https://docs.google.com/document/d/1rX5nL2nX7yLunw_2YbDaeZIIGnvy-K_9/edit?usp=drive_link&ouid=116152493034068794971&rtpof=true&sd=true">Términos
+                        y condiciones de nuestros servicios</a>
+                </p>
+
             </div>
 
         </footer>
