--- a/index.html
+++ b/index.html
@@ -123,7 +123,10 @@
                                 <use href="./assets/icons/iconos.svg#icon-info"
                                     xlink:href="./assets/icons/iconos.svg#icon-info"></use>
                             </svg>Hacé click en la excursión que te interesa para ver la ficha
-                            correspondiente. <br><span class="warning">Las fichas se abren en una ventana nueva.</span>
+                            correspondiente. <br><span class="warning"><svg class="warning">
+                                    <use href="./assets/icons/iconos.svg#icon-warning"
+                                        xlink:href="./assets/icons/iconos.svg#icon-warning"></use>
+                                </svg>Las fichas se abren en una ventana nueva.</span>
                         </p>
                         <ul>
                             <li><a rel="noopener noreferrer" target="_blank"
@@ -198,7 +201,10 @@
                     </div>
                     <div class="apartados__extra--contenido">
                         <p class="small info">Hacé click en la excursión que te interesa para ver la ficha
-                            correspondiente. <br><span class="warning">Las fichas se abren en una ventana nueva.</span>
+                            correspondiente. <br><span class="warning"><svg class="warning">
+                                    <use href="./assets/icons/iconos.svg#icon-warning"
+                                        xlink:href="./assets/icons/iconos.svg#icon-warning"></use>
+                                </svg>Las fichas se abren en una ventana nueva.</span>
                         </p>
                         <ul>
                             <li><a rel="noopener noreferrer" target="_blank"
@@ -320,7 +326,10 @@
                                 <use href="./assets/icons/iconos.svg#icon-info"
                                     xlink:href="./assets/icons/iconos.svg#icon-info"></use>
                             </svg>Hacé click en la excursión que te interesa para ver la ficha
-                            correspondiente. <br><span class="warning">Las fichas se abren en una ventana nueva.</span>
+                            correspondiente. <br><span class="warning"><svg class="warning">
+                                    <use href="./assets/icons/iconos.svg#icon-warning"
+                                        xlink:href="./assets/icons/iconos.svg#icon-warning"></use>
+                                </svg>Las fichas se abren en una ventana nueva.</span>
                         </p>
 
                         <ul>
@@ -364,7 +373,10 @@
                     </div>
                     <div class="apartados__extra--contenido">
                         <p class="small info">Hacé click en la excursión que te interesa para ver la ficha
-                            correspondiente. <br><span class="warning">Las fichas se abren en una ventana nueva.</span>
+                            correspondiente. <br><span class="warning"><svg class="warning">
+                                    <use href="./assets/icons/iconos.svg#icon-warning"
+                                        xlink:href="./assets/icons/iconos.svg#icon-warning"></use>
+                                </svg>Las fichas se abren en una ventana nueva.</span>
                         </p>
                         <ul>
                             <li><a rel="noopener noreferrer" target="_blank"
@@ -456,7 +468,10 @@
                                 <use href="./assets/icons/iconos.svg#icon-info"
                                     xlink:href="./assets/icons/iconos.svg#icon-info"></use>
                             </svg>Hacé click en la excursión que te interesa para ver la ficha
-                            correspondiente. <br><span class="warning">Las fichas se abren en una ventana nueva.</span>
+                            correspondiente. <br><span class="warning"><svg class="warning">
+                                    <use href="./assets/icons/iconos.svg#icon-warning"
+                                        xlink:href="./assets/icons/iconos.svg#icon-warning"></use>
+                                </svg>Las fichas se abren en una ventana nueva.</span>
                         </p>
                         <ul>
 
@@ -509,7 +524,10 @@
                     </div>
                     <div class="apartados__extra--contenido">
                         <p class="small info">Hacé click en la excursión que te interesa para ver la ficha
-                            correspondiente. <br><span class="warning">Las fichas se abren en una ventana nueva.</span>
+                            correspondiente. <br><span class="warning"><svg class="warning">
+                                    <use href="./assets/icons/iconos.svg#icon-warning"
+                                        xlink:href="./assets/icons/iconos.svg#icon-warning"></use>
+                                </svg>Las fichas se abren en una ventana nueva.</span>
                         </p>
                         <ul>
                             <li><a rel="noopener noreferrer" target="_blank"
@@ -569,7 +587,7 @@
                                 xlink:href="./assets/icons/iconos.svg#icon-info"></use>
                         </svg>Escribinos para solicitar cotización por el destino que se te ocurra.</p>
                     <h3>Provincia de
-                        Mendoza y alrededores, incluso Chile</h3>
+                        Mendoza y alrededores</h3>
                     <ul>
                         <li><a rel="noopener noreferrer" target="_blank"
                                 href="https://docs.google.com/document/d/1FTvTpxZzFwZOt7tG3rmcvtIDzds4YSdL/edit">Cruce
