boton de terminos y condiciones

--- a/index.html
+++ b/index.html
@@ -777,8 +777,8 @@
                     aceptamos efectivo.</p>
                 <p class="small sipago">Con el apoyo, la experiencia y confianza de SIPAGO <img class="sipagoLogo"
                         src="./assets/pagos/Ssipago.png" alt="logoSipago"></p>
-                <p>
-                    <a class="small terminos_condiciones"
+                <p class="terminos_condiciones">
+                    <a class="small"
                         href="https://docs.google.com/document/d/1rX5nL2nX7yLunw_2YbDaeZIIGnvy-K_9/edit?usp=drive_link&ouid=116152493034068794971&rtpof=true&sd=true">Términos
                         y condiciones de nuestros servicios</a>
                 </p>
